# p0_project

./: .gitignore  .gitmodules  CURSOR_SETUP.md  README.md  pyproject.toml  requirements.txt
configs/: assist2012.yaml  junyi.yaml  synthetic_c2.yaml  synthetic_c5.yaml  xes3g5m.yaml
logs/: experiment_log.csv  literature_search_log.csv
paper/: main.tex  refs.bib
results/predictions/: assist2012_diagnostic_predictions_sample.csv  junyi_diagnostic_predictions_sample.csv  xes3g5m_diagnostic_predictions_sample.csv
results/reports/: assist2012_dag_pruning_log.csv  assist2012_dag_report.md  cold_start_report.md  junyi_dag_pruning_log.csv  junyi_dag_report.md  (+7 more)
scripts/: GRAPH_ABLATION_EXPERIMENT.md  generate_paper_artifacts.py  make_all_figures.sh  run_all_datasets_full.ps1  run_all_datasets_full.sh  run_assist_minimal.sh  run_graph_ablation_experiment.ps1  run_graph_ablation_experiment.sh  run_gt_cross_validation_junyi.py  run_junyi_minimal.sh  run_one_step.ps1  run_xes3g5m_minimal.sh
src/: __init__.py  baseline_runner.py  classical_bkt.py  cold_start_report.py  dag_audit.py  dag_disruption.py  export_full_log_graph.py  graph_builder.py  gt_cross_validation.py  io_utils.py  leakage_metrics.py  preprocess.py  pykt_engine.py  pykt_export.py  pykt_graph_matrix.py  report_generator.py  split_checker.py
tests/: test_baseline_model_weights.py  test_dag_audit.py  test_dag_disruption.py  test_graph_builder_train_only.py  test_gt_cross_validation.py  test_leakage_head_training.py  test_leakage_metrics.py  test_preprocess_xes.py  test_pykt_export.py  test_split_checker.py
(+34 files in other folders)
